tests/bad/let_in_struct_field.oc
/// fail: Expected identifier for field name

struct Test {
    let var: u32 //  if has const or let building no error, But always loop can't exits must kill
}